--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ColosseoDuel</string>
+    <string name="app_name">羅馬競技生死鬥</string>
     <string name="no_video_record_permission">再不開錄影相關權限真的會被罵</string>
     <string name="open_video_record_permission">惡魔貓男叫你開權限</string>
 </resources>
